# ZQ_OPS_Brain-v2

./: .gitignore  .package-lock.json  App.css  App.tsx  BUILD.md  BUILD_INSTRUCTIONS.md  README.md  index.css  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts  ©
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/INNM_ENGINE/: back_matrix.py  front_matrix.py  ibox_core.py  innm_core.py  up_matrix.py  woods_builder.py
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: utils.ts
